syntax = "proto3";

package coinbase.staking.v1alpha1;

import "coinbase/staking/v1alpha1/common.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/field_behavior.proto";

option go_package = "github.com/coinbase/staking-client-library-go/gen/go/coinbase/staking/v1alpha1";

// The parameters required for the stake action on Ethereum Kiln.
message EthereumKilnStakeParameters {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {title: "EthereumKiln: Stake Parameters"}
  };

  // The address you wish to stake from.
  string staker_address = 1 [(google.api.field_behavior) = REQUIRED];

  // The address of the integrator contract.
  string integrator_contract_address = 2 [(google.api.field_behavior) = REQUIRED];

  // The amount of Ethereum to stake in wei.
  Amount amount = 3 [(google.api.field_behavior) = REQUIRED];
}

// The parameters required for the unstake action on Ethereum Kiln.
message EthereumKilnUnstakeParameters {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {title: "EthereumKiln: Unstake Parameters"}
  };

  // The address you wish to unstake from.
  string staker_address = 1 [(google.api.field_behavior) = REQUIRED];

  // The address of the integrator contract.
  string integrator_contract_address = 2 [(google.api.field_behavior) = REQUIRED];

  // The amount of Ethereum to unstake in wei.
  Amount amount = 3 [(google.api.field_behavior) = REQUIRED];
}

// The parameters required for the claim rewards action on Ethereum Kiln.
message EthereumKilnClaimRewardsParameters {
  option deprecated = true;
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {title: "EthereumKiln: Claim Rewards Parameters"}
  };

  // The address you wish to claim rewards for.
  string staker_address = 1 [(google.api.field_behavior) = REQUIRED];

  // The address of the integrator contract.
  string integrator_contract_address = 2 [(google.api.field_behavior) = REQUIRED];
}

// The parameters required for the claim stake action on Ethereum Kiln.
message EthereumKilnClaimStakeParameters {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {title: "EthereumKiln: Claim Stake Parameters"}
  };

  // The address you wish to claim stake for.
  string staker_address = 1 [(google.api.field_behavior) = REQUIRED];

  // The address of the integrator contract
  string integrator_contract_address = 2 [(google.api.field_behavior) = REQUIRED];
}

// The parameters needed for staking on Ethereum via Kiln.
message EthereumKilnStakingParameters {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {title: "EthereumKiln: Staking Parameters"}
  };

  oneof parameters {
    // The parameters for stake action on Ethereum Kiln.
    EthereumKilnStakeParameters stake_parameters = 1;
    // The parameters for unstake action on Ethereum Kiln.
    EthereumKilnUnstakeParameters unstake_parameters = 2;
    // The parameters for claim rewards action on Ethereum Kiln.
    EthereumKilnClaimRewardsParameters claim_rewards_parameters = 3;
    // The parameters for claim stake action on Ethereum Kiln.
    EthereumKilnClaimStakeParameters claim_stake_parameters = 4;
  }
}

// The protocol specific parameters required for fetching a staking context.
message EthereumKilnStakingContextParameters {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {title: "EthereumKiln: Staking Context Parameters"}
  };

  // Integrator contract address.
  string integrator_contract_address = 1;
}

// The protocol specific details for an Ethereum Kiln staking context.
message EthereumKilnStakingContextDetails {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {title: "EthereumKiln: Staking context details"}
  };

  // The Ethereum balance of the address.
  // This can be used to gate the stake action to make sure the requested stake amount
  // is less than ethereum_balance.
  Amount ethereum_balance = 1;

  // The number of integrator shares owned by the address.
  Amount integrator_share_balance = 2;

  // The total Ethereum you can exchange for your integrator shares.
  // This can be used to gate the unstake action to make sure the requested unstake amount
  // is less than integrator_share_underlying_balance
  Amount integrator_share_underlying_balance = 3;

  // The total amount of Ethereum you can redeem for all non-claimed vPool shares.
  // This along with the condition total_shares_pending_exit == fulfillable_share_count
  // can be used to gate the claim_stake action.
  Amount total_exitable_eth = 4;

  // The number of vPool shares are eligible to receive now or at a later point in time.
  Amount total_shares_pending_exit = 5;

  // The number of vPool shares you are able to claim now.
  Amount fulfillable_share_count = 6;
}
